<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="student"
        android:key="username"
        android:summary="summary"
        android:title="@string/username" />
    <EditTextPreference
        android:defaultValue="password"
        android:key="password"
        android:password="true"
        android:title="@string/password" />
    <EditTextPreference
        android:defaultValue="http:\\\\yamba.marakana.com\\api"
        android:key="serverURL"
        android:title="@string/serverurl" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/interval_names"
        android:entryValues="@array/interval_values"
        android:key="interval"
        android:summary="@string/interval_summary"
        android:title="@string/interval" />

</PreferenceScreen>